Changelog started November 2006; Currently at version 0.9.1

Legend:
--------------------------------------------------------------------------------
 ! Minor change or bugfix. (don't bother to log typos except between releases.)
 * Change like above, but affects templates.
 & Change that affects a language file. (make two if it affects templates too.)
 + Feature addition or improvement.
 - Feature or option removal.
 % Development flag or note, such as branching.


Pretty URLs 0.9.1                                              24 February, 2009
================================================================================
 ! Base/reverter: Installs on SMF 2.0 RC1.
 ! Base: Don't let fix_possible_url() change any URLs. (News.php)

Pretty URLs 0.9                                                12 November, 2008
================================================================================
 % Branched off 0.8 so that changes for 2.0 support won't get confused with everything else.
 ! Base: Some colour changes were needed for dark themes. (chrome.css)
 - Base: Removed the cache table's log_time column as it's not used anymore.
 ! Base: Some futher changes for 2.0 Beta 3 support were required.
 % Base: Move the buffer rewriting code out of QueryString.php into it's own function in PrettyUrls-Filters.php.
 + Base: Started reworking the URL generator. (Subs-PrettyUrls.php)
 ! Boards/Topics: $_GET['pretty'] needs to be unset with the new SEO changes in SMF 2. (QueryString.php)
 ! Boards/Topics: Don't add a 'b' or 't' before IDs unless it's really needed. (PrettyUrls-Filters.php, QueryString.php, Subs-PrettyUrls.php)
 ! Topics: Fix broken quotes during maintenance rather than installation. (Subs-PrettyUrls.php)
 + Base: Turkish ISO-8859-9 encoding is hopefully supported now. (Subs-PrettyUrls.php)
 ! Boards/Topics: Fix $_REQUEST for silly mods that don't check $board/$topic. (Display.php, MessageIndex.php, QueryString.php)
 % Base: Updated for SMF 2.0 Beta 3.1 Public.