@@ -3,7 +3,7 @@
 
 <modification xmlns="http://www.simplemachines.org/xml/modification">
 	<id>el:prettyurls</id>
-	<version>0.9.1</version>
+	<version>0.9.2</version>
 
 	<file name="$boarddir/index.php">
 		<operation>
@@ -104,13 +104,13 @@ $context = array('pretty' => array(
 	if (empty($modSettings['queryless_urls']) || ($context['server']['is_cgi'] && @ini_get('cgi.fix_pathinfo') == 0) || !$context['server']['is_apache'])
 		return $val;
 
-	$val = preg_replace('/^' . preg_quote($scripturl, '/') . '\?((?:board|topic)=[^#"]+)(#[^"]*)?$/e', '\'\' . $scripturl . \'/\' . strtr(\'$1\', \'&;=\', \'//,\') . \'.html$2\'', $val);
+	$val = preg_replace('/^' . preg_quote($scripturl, '/') . '\?((?:board|topic)=[^#"]+)(#[^"]*)?$/e', "'' . \$scripturl . '/' . strtr('\$1', '&;=', '//,') . '.html\$2'", $val);
 ]]></search>
 			<add><![CDATA[
 /***	if (empty($modSettings['queryless_urls']) || ($context['server']['is_cgi'] && @ini_get('cgi.fix_pathinfo') == 0) || !$context['server']['is_apache'])
 		return $val;
 
-	$val = preg_replace('/^' . preg_quote($scripturl, '/') . '\?((?:board|topic)=[^#"]+)(#[^"]*)?$/e', '\'\' . $scripturl . \'/\' . strtr(\'$1\', \'&;=\', \'//,\') . \'.html$2\'', $val); ***/
+	$val = preg_replace('/^' . preg_quote($scripturl, '/') . '\?((?:board|topic)=[^#"]+)(#[^"]*)?$/e', "'' . \$scripturl . '/' . strtr('\$1', '&;=', '//,') . '.html\$2'", $val); ***/
 ]]></add>
 		</operation>
 	</file>
@@ -226,6 +226,33 @@ function ob_sessrewrite($buffer)
 			<add><![CDATA[
 				'manage_themes' => '<a href="' . $scripturl . '?action=theme;sa=admin;sesc=' . $sc . '">' . $txt['theme_admin'] . '</a>',
 				'pretty_admin' => '<a href="' . $scripturl . '?action=admin;area=pretty">' . $txt['pretty_admin_menu'] . '</a>',
+]]></add>
+		</operation>
+	</file>
+
+	<file name="$sourcedir/Subs-Post.php">
+		<operation>
+			<search position="replace"><![CDATA[
+	global $webmaster_email, $context, $modSettings, $txt, $scripturl;
+]]></search>
+			<add><![CDATA[
+	global $webmaster_email, $context, $modSettings, $txt, $scripturl, $sourcedir;
+]]></add>
+		</operation>
+
+		<operation>
+			<search position="before"><![CDATA[
+	$message = str_replace(array("\r", "\n"), array('', $line_break), stripslashes($message));
+]]></search>
+			<add><![CDATA[
+	// Prettify any URLs
+	if ($modSettings['pretty_enable_filters'])
+	{
+		require_once($sourcedir . '/PrettyUrls-Filters.php');
+		$context['pretty']['search_patterns'][] = '~(\s)(' . $scripturl . '[^#\s]*)~';
+		$context['pretty']['replace_patterns'][] = '~(\s)(' . $scripturl . '[^\s]*)~';
+		$message = pretty_rewrite_buffer($message);
+	}
 ]]></add>
 		</operation>
 	</file>
