@@ -16,7 +16,7 @@ Creative Commons Attribution Share-Alike 2.5 licence
 (http://creativecommons.org/licenses/by-sa/2.5/).
 
 * Pretty URLs licence *
-Copyright (c) 2006-2008, Dannii Willis, René-Gilles Deberdt
+Copyright (c) 2006-2009, Dannii Willis, René-Gilles Deberdt
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
